Fixed margins and spacing on main section and details on the grid

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,13 +154,20 @@ h3, h4 {
 }
 @media screen and (min-width: 850px) {
   .grid-container {
+    grid-template-rows: 109px 1.5fr 1fr 1fr 1fr;
+  }
+}
+@media screen and (min-width: 974px) {
+  .grid-container {
     grid-template-rows: 109px 2fr 1fr 1fr 1fr;
   }
 }
 
 .row {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(333px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 70px;
+  margin-top: 3em;
 }
 
 .h-section {
@@ -193,10 +200,13 @@ h3, h4 {
 }
 
 .m-features {
-  padding: 1em 0;
+  padding: 2em 15%;
 }
 .m-features__title {
   text-align: center;
+}
+.m-features__image {
+  align-self: center;
 }
 
 /*
