--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -9,11 +9,17 @@
   grid-template-rows: 109px 1fr 1fr 1fr 1fr;
 
   @media screen and (min-width: 850px) {
+    grid-template-rows: 109px 1.5fr 1fr 1fr 1fr;
+  }
+
+  @media screen and (min-width: 974px) {
     grid-template-rows: 109px 2fr 1fr 1fr 1fr;
   }
 }
 
 .row {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(333px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 70px;
+  margin-top: 3em;
 }
